--- a/client/src/app/toast/toast.component.scss
+++ b/client/src/app/toast/toast.component.scss
@@ -19,7 +19,7 @@
   flex-direction: row;
   align-items: center;
   overflow: hidden;
-  transform: translateY(100% + 30);
+  transform: translateY(100%);
   transition: all 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.35);
   width: 400px;
   max-width: 100vw;
@@ -27,7 +27,25 @@
   position: relative;
 }
 .toast.active {
-  transform: translateY(0);
+  transform: translateY(0%);
+}
+.toast.success {
+  border-left-color: green;
+}
+.toast.error {
+  border-left-color: red;
+}
+.toast.warning {
+  border-left-color: yellow;
+}
+.toast.success .progress:before {
+  background-color: green;
+}
+.toast.error .progress:before {
+  background-color: red;
+}
+.toast.warning .progress:before {
+  background-color: yellow;
 }
 .toast-content .message {
   display: flex;
@@ -72,7 +90,10 @@
 #toast-headline {
   font-weight: bold;
   color: #333;
+  font-size: 1rem;
 }
 .text {
+  padding-top: 0.25rem;
   color: #666;
+  font-size: 0.85rem;
 }
