--- a/client/src/app/training-view/training-view.component.html
+++ b/client/src/app/training-view/training-view.component.html
@@ -1,14 +1,13 @@
 @if (isLoading) {
 <app-spinner></app-spinner>
 } @else {
-<div class="container my-4">
-  <div class="row align-items-center">
-    <div class="col text-left">
-      <h3 class="display-4 title">{{ title }}</h3>
-      <p class="lead week-day-info">
-        Week {{ trainingWeekIndex }} - Day {{ trainingDayIndex }}
-      </p>
-    </div>
+
+<div class="row align-items-center">
+  <div class="col mt-4 mb-5">
+    <h3 class="display-4 title d-inline">{{ title }}</h3>
+    <p class="lead week-day-info d-inline ms-3">
+      Week {{ trainingWeekIndex }} - Day {{ trainingDayIndex }}
+    </p>
   </div>
 </div>
 
@@ -29,7 +28,7 @@
       </tr>
     </thead>
     <tbody>
-      @for (k of [1, 2, 3, 4, 5, 6, 7, 8]; track k) {
+      @for (k of [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]; track k) {
       <tr>
         <td data-cell="Category">
           <select
