--- a/client/src/app/training-view/training-view.component.scss
+++ b/client/src/app/training-view/training-view.component.scss
@@ -1,10 +1,11 @@
-/* Custom CSS goes here */
-.col {
-  transition: transform 0.3s ease-in-out;
+.title {
+  font-size: 2.5rem;
+  font-weight: bold;
 }
 
-.col:hover {
-  transform: scale(0.9875);
+.week-day-info {
+  font-size: 1.5rem;
+  margin-left: 1rem;
 }
 
 .active {
