--- a/client/src/app/training-view/training-view.component.scss
+++ b/client/src/app/training-view/training-view.component.scss
@@ -33,6 +33,100 @@
   text-align: center;
 }
 
+.fixed-bottom-bar {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: #f8f9fa;
+  border-top: 4px solid white;
+  box-shadow: 0 -2px 5px rgba(0, 0, 0, 0.1);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 1rem 0;
+}
+
+.fixed-bottom-bar .icon {
+  margin: 0 15px;
+  cursor: pointer;
+  font-size: 1.75rem;
+}
+
+/* Test */
+.pagination-outer {
+  text-align: center;
+}
+.pagination {
+  font-family: "Ubuntu", sans-serif;
+  display: inline-flex;
+  position: relative;
+}
+.pagination li a.page-link {
+  color: #333;
+  background-color: #e7e7e7;
+  font-size: 20px;
+  font-weight: 500;
+  line-height: 39px;
+  height: 40px;
+  width: 40px;
+  padding: 0;
+  margin: 0 5px;
+  border: none;
+  border-radius: 10px;
+  position: relative;
+  z-index: 1;
+  transition: all 0.3s ease 0s;
+}
+.pagination li a.page-link:hover,
+.pagination li a.page-link:focus,
+.pagination li.active a.page-link:hover,
+.pagination li.active a.page-link {
+  color: #fff;
+  background: transparent;
+}
+.pagination li a.page-link:before,
+.pagination li a.page-link:after {
+  content: "";
+  background: linear-gradient(to right, #6d6d6d 50%, transparent 50%);
+  height: 100%;
+  width: 100%;
+  border-radius: 50%;
+  opacity: 0;
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: -1;
+  transition: all 0.4s ease 0s;
+}
+.pagination li a.page-link:after {
+  background: linear-gradient(to right, #333333 50%, transparent 50%);
+  transform: rotateY(180deg);
+  top: auto;
+  bottom: 0;
+}
+.pagination li a.page-link:hover:before,
+.pagination li a.page-link:focus:before,
+.pagination li.active a.page-link:before,
+.pagination li a.page-link:hover:after,
+.pagination li a.page-link:focus:after,
+.pagination li.active a.page-link:after {
+  height: 85%;
+  opacity: 1;
+}
+@media only screen and (max-width: 480px) {
+  .pagination {
+    font-size: 0;
+    border: none;
+    display: inline-block;
+  }
+  .pagination li {
+    display: inline-block;
+    vertical-align: top;
+    margin: 0 0 10px;
+  }
+}
+
 @media (max-width: 768px) {
   .responsive-table td {
     display: grid;
@@ -82,4 +176,41 @@
   .actualRPE {
     text-align: left;
   }
+}
+
+a {
+  text-decoration: none;
+}
+
+/* GENERAL STYLES */
+
+.pagination {
+  padding: 30px 0;
+}
+
+.pagination ul {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
+}
+
+.pagination a {
+  display: inline-block;
+  padding: 10px 18px;
+  color: #222;
+}
+
+/* ONE */
+
+.p1 a {
+  width: 40px;
+  height: 40px;
+  line-height: 40px;
+  padding: 0;
+  text-align: center;
+}
+
+.p1 a.is-active {
+  background-color: #e7e7e7;
+  border-radius: 100%;
 }
