--- a/client/src/app/training-view/training-view.component.scss
+++ b/client/src/app/training-view/training-view.component.scss
@@ -8,23 +8,11 @@
   margin-left: 1rem;
 }
 
-.active {
-  transition: transform 0.3s ease-in-out;
-  transform: scale(0.975);
-}
-
-.small-white-border {
-  border-color: #e1e1e1;
-}
-
 .training-table tr td input[type="number"] {
   text-align: center;
 }
 
-.training-table td:nth-of-type(1) {
-  min-width: 140px;
-}
-
+.training-table td:nth-of-type(1),
 .training-table td:nth-of-type(2) {
   min-width: 140px;
 }
@@ -53,78 +41,42 @@
   font-size: 1.75rem;
 }
 
-/* Test */
-.pagination-outer {
-  text-align: center;
+table caption {
+  caption-side: top;
+  text-align: left;
+  font-size: 1.5rem;
+  font-weight: bold;
+  padding-top: 1rem;
+  padding-bottom: 2rem;
 }
-.pagination {
-  font-family: "Ubuntu", sans-serif;
-  display: inline-flex;
+
+.context-headline,
+.headline {
+  font-size: 1.65rem;
+}
+
+.context-headline {
+  color: #c9c9c9;
+}
+
+.headline {
+  margin-left: 0.375rem;
+}
+
+.question-box {
+  display: inline-block;
+
+  color: black;
+  margin-left: 2rem;
+  cursor: pointer;
+  border-radius: 5px;
   position: relative;
+  top: 2px;
 }
-.pagination li a.page-link {
-  color: #333;
-  background-color: #e7e7e7;
-  font-size: 20px;
-  font-weight: 500;
-  line-height: 39px;
-  height: 40px;
-  width: 40px;
-  padding: 0;
-  margin: 0 5px;
-  border: none;
-  border-radius: 10px;
-  position: relative;
-  z-index: 1;
-  transition: all 0.3s ease 0s;
-}
-.pagination li a.page-link:hover,
-.pagination li a.page-link:focus,
-.pagination li.active a.page-link:hover,
-.pagination li.active a.page-link {
-  color: #fff;
-  background: transparent;
-}
-.pagination li a.page-link:before,
-.pagination li a.page-link:after {
-  content: "";
-  background: linear-gradient(to right, #6d6d6d 50%, transparent 50%);
-  height: 100%;
-  width: 100%;
-  border-radius: 50%;
-  opacity: 0;
-  position: absolute;
-  left: 0;
-  top: 0;
-  z-index: -1;
-  transition: all 0.4s ease 0s;
-}
-.pagination li a.page-link:after {
-  background: linear-gradient(to right, #333333 50%, transparent 50%);
-  transform: rotateY(180deg);
-  top: auto;
-  bottom: 0;
-}
-.pagination li a.page-link:hover:before,
-.pagination li a.page-link:focus:before,
-.pagination li.active a.page-link:before,
-.pagination li a.page-link:hover:after,
-.pagination li a.page-link:focus:after,
-.pagination li.active a.page-link:after {
-  height: 85%;
-  opacity: 1;
-}
-@media only screen and (max-width: 480px) {
-  .pagination {
-    font-size: 0;
-    border: none;
-    display: inline-block;
-  }
-  .pagination li {
-    display: inline-block;
-    vertical-align: top;
-    margin: 0 0 10px;
-  }
+
+.question-box .icon {
+  color: #4a4a4a;
+  font-size: 24px;
 }
 
 @media (max-width: 768px) {
@@ -141,20 +93,6 @@
 
   .responsive-table td::before {
     content: attr(data-cell) ": ";
-  }
-
-  .volume-table tr td:nth-of-type(1),
-  .volume-table tr td:nth-of-type(3) {
-    display: none;
-  }
-
-  .volume-table tfoot tr td:nth-of-type(2) {
-    display: none;
-  }
-
-  .volume-table tfoot tr td:nth-of-type(3) {
-    display: grid;
-    grid-template-columns: 20ch auto;
   }
 
   .training-table tr {
@@ -176,41 +114,4 @@
   .actualRPE {
     text-align: left;
   }
-}
-
-a {
-  text-decoration: none;
-}
-
-/* GENERAL STYLES */
-
-.pagination {
-  padding: 30px 0;
-}
-
-.pagination ul {
-  margin: 0;
-  padding: 0;
-  list-style-type: none;
-}
-
-.pagination a {
-  display: inline-block;
-  padding: 10px 18px;
-  color: #222;
-}
-
-/* ONE */
-
-.p1 a {
-  width: 40px;
-  height: 40px;
-  line-height: 40px;
-  padding: 0;
-  text-align: center;
-}
-
-.p1 a.is-active {
-  background-color: #e7e7e7;
-  border-radius: 100%;
 }
