Implement week navigation

--- a/client/src/app/pagination/pagination.component.html
+++ b/client/src/app/pagination/pagination.component.html
@@ -7,7 +7,7 @@
       href="#"
       (click)="navigatePage(page, $event)"
     >
-      <li>{{ page }}</li>
+      <li>{{ page + 1 }}</li>
     </a>
     }
     <!--  <a href="#" (click)="navigatePage(currentPage + 1, $event)"><li>></li></a> -->
