--- a/client/src/app/pagination/pagination.component.scss
+++ b/client/src/app/pagination/pagination.component.scss
@@ -32,5 +32,6 @@ a {
 
 .p1 a.is-active {
   background-color: #e7e7e7;
-  border-radius: 100%;
+  /*  border-radius: 100%; */
+  border-radius: 5px;
 }
