--- a/client/src/app/training-view/training-view.component.scss
+++ b/client/src/app/training-view/training-view.component.scss
@@ -96,7 +96,7 @@ table caption {
   }
 
   .training-table tr {
-    border-top: 4px solid black;
+    border-top: 4px solid rgb(216, 216, 216);
   }
 
   .training-table td {
