--- a/client/src/app/training-view/training-view.component.html
+++ b/client/src/app/training-view/training-view.component.html
@@ -143,6 +143,9 @@
   </div>
 
   <input type="submit" class="btn btn-dark" />
+  <button class="btn btn-outline-dark m-1" id="reset-btn" type="button">
+    Options
+  </button>
 </form>
 }
 
