Implement image save via base64 encoding

--- a/client/src/app/Pages/training-plans/training-plans.component.html
+++ b/client/src/app/Pages/training-plans/training-plans.component.html
@@ -23,63 +23,16 @@
       } @else { @for (trainingPlan of filteredTrainingPlans; track trainingPlan;
       let i = $index) {
       <div class="col-lg-4 mb-4">
-        <!-- <div class="card">
-          <img
-            src="https://images.unsplash.com/photo-1477862096227-3a1bb3b08330?ixlib=rb-1.2.1&auto=format&fit=crop&w=700&q=60"
-            alt="Training Image"
-            class="card-img-top"
-          />
-          <div class="card-body">
-            <h5 class="card-title mb-3">{{ trainingPlan.title }}</h5>
-            <p class="card-text mb-1">
-              Frequenz:
-              <span class="text-muted"
-                >{{ trainingPlan.trainingFrequency }} Trainings / Woche</span
-              >
-            </p>
-            <p class="card-text">
-              Zuletzt angesehen:
-              <span class="text-muted">{{ trainingPlan.lastUpdated }}</span>
-            </p>
-            <button
-              type="button"
-              class="btn btn-light btn-md m-1"
-              (click)="viewTrainingPlan(trainingPlan.id)"
-              data-bs-toggle="tooltip"
-              data-placement="top"
-              title="Ansehen"
-            >
-              <i class="bx bx-show"></i>
-            </button>
-            <button
-              type="button"
-              class="btn btn-light btn-md m-1"
-              (click)="editTrainingPlan(trainingPlan.id)"
-              data-bs-toggle="tooltip"
-              data-bs-placement="top"
-              title="Bearbeiten"
-            >
-              <i class="bx bx-edit"></i>
-            </button>
-            <button
-              type="button"
-              class="btn btn-light btn-md m-1"
-              (click)="deleteTrainingPlan(trainingPlan.id)"
-              data-bs-toggle="tooltip"
-              data-bs-placement="top"
-              title="Löschen"
-            >
-              <i class="bx bx-trash"></i>
-            </button>
-          </div>
-        </div> -->
-        <!-- Copy the content below until next comment -->
         <div class="card card-custom bg-white border-white border-0">
           <div
             class="card-custom-img"
-            style="
-              background-image: url(https://images.unsplash.com/photo-1477862096227-3a1bb3b08330?ixlib=rb-1.2.1&auto=format&fit=crop&w=700&q=60);
-            "
+            [ngStyle]="{
+              'background-image':
+                'url(' +
+                (trainingPlan.coverImageBase64 ||
+                  'https://images.unsplash.com/photo-1477862096227-3a1bb3b08330?ixlib=rb-1.2.1&auto=format&fit=crop&w=700&q=60') +
+                ')'
+            }"
           ></div>
           <div class="card-custom-avatar">
             <img
