--- a/client/src/app/edit-training-plan/edit-training-plan.component.html
+++ b/client/src/app/edit-training-plan/edit-training-plan.component.html
@@ -7,6 +7,7 @@
       <form [formGroup]="trainingForm" (ngSubmit)="onSubmit()">
         <div class="form-group text-center mb-4 position-relative">
           <img
+            #coverImage
             src="https://via.placeholder.com/150"
             alt="Cover Bild Platzhalter"
             id="cover-image"
