--- a/client/src/app/edit-training-plan/edit-training-plan.component.html
+++ b/client/src/app/edit-training-plan/edit-training-plan.component.html
@@ -20,8 +20,8 @@
             class="form-control-file position-absolute"
             style="
               opacity: 0;
-              width: 150px;
-              height: 150px;
+              width: 100%;
+              height: 100%;
               top: 0;
               left: 0;
               cursor: pointer;
