--- a/client/src/app/Pages/profile/profile.component.scss
+++ b/client/src/app/Pages/profile/profile.component.scss
@@ -12,9 +12,12 @@
   height: 300px;
 }
 
-body {
-  background: #654ea3;
-  background: linear-gradient(to right, #e96443, #904e95);
-  min-height: 100vh;
-  overflow-x: hidden;
+.file-input {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 130px;
+  height: 130px;
+  opacity: 0;
+  cursor: pointer;
 }
