--- a/client/src/app/change-profile-picture-confirmation/change-profile-picture-confirmation.component.html
+++ b/client/src/app/change-profile-picture-confirmation/change-profile-picture-confirmation.component.html
@@ -1,4 +1,4 @@
-<div class="text-center mt-5">
+<div class="text-center p-5">
   <div class="d-flex justify-content-center align-items-center">
     <div>
       <img
