Implement tab strip tab change and display of components + improve layout

--- a/client/src/app/tab-strip/tab-strip.component.html
+++ b/client/src/app/tab-strip/tab-strip.component.html
@@ -1,6 +1,6 @@
 <div class="tab-strip">
   @for (tab of tabs; track tab; let index = $index) {
-  <div (click)="setActiveTab(index)" [class.active]="tab.active" class="tab">
+  <div (click)="selectTab(tab)" [class.active]="tab.active" class="tab">
     {{ tab.title }}
   </div>
   }
