--- a/client/src/app/Pages/profile/profile.component.html
+++ b/client/src/app/Pages/profile/profile.component.html
@@ -62,8 +62,24 @@
     </div>
     <div class="py-4 px-4">
       <div class="row">
-        <app-tab-strip [tabs]="tabs"></app-tab-strip>
+        <app-tab-strip
+          [tabs]="tabs"
+          (tabSelected)="onTabSelected($event)"
+        ></app-tab-strip>
       </div>
+      @if (activeTab === "Freunde") {
+      <div>Freunde</div>
+      } @else if (activeTab === "Anfragen") {
+      <div>Anfragne</div>
+      } @else if (activeTab === "Ausstehend") {
+      <div>Ausshtehend</div>
+      }
+      <input
+        class="bg-light form-control mt-3"
+        type="search"
+        placeholder="Search..."
+        aria-label="Search"
+      />
     </div>
   </div>
 </div>
