--- a/client/src/app/components/header/header.component.html
+++ b/client/src/app/components/header/header.component.html
@@ -64,15 +64,13 @@
     </div>
 
     <div class="d-flex align-items-center">
-      <form class="w-100 me-3">
-        <input
-          class="bg-light form-control"
-          type="search"
-          placeholder="Search..."
-          aria-label="Search"
-          (input)="onSearchInput($event)"
-        />
-      </form>
+      <input
+        class="bg-light form-control me-3"
+        type="search"
+        placeholder="Search..."
+        aria-label="Search"
+        (input)="onSearchInput($event)"
+      />
 
       <div class="flex-shrink-0 dropdown">
         <a
