Implement swipe Listener for single day!

--- a/client/src/app/training-view/training-view.component.html
+++ b/client/src/app/training-view/training-view.component.html
@@ -3,6 +3,7 @@
 } @else {
 <form (submit)="onSubmit($event)" class="mt-4" id="form">
   <table
+    #trainingTable
     class="table table-striped training-table responsive-table caption-top mb-4"
   >
     <caption>
