--- a/client/src/app/components/spinner/spinner.component.scss
+++ b/client/src/app/components/spinner/spinner.component.scss
@@ -1,6 +1,6 @@
 .spinner-overlay {
   position: fixed;
-  top: 0;
+  top: 100px;
   left: 0;
   width: 100%;
   height: 100%;
@@ -18,6 +18,8 @@
   width: 40px;
   height: 40px;
   animation: spin 1s linear infinite;
+  position: relative;
+  bottom: 100px;
 }
 
 @keyframes spin {
