Implement tooltipService via angular directive

--- a/client/src/app/Pages/training-plans/training-plans.component.html
+++ b/client/src/app/Pages/training-plans/training-plans.component.html
@@ -58,9 +58,7 @@
               type="button"
               class="btn btn-light btn-md m-1"
               (click)="viewTrainingPlan(trainingPlan.id)"
-              data-bs-toggle="tooltip"
-              data-placement="top"
-              title="Ansehen"
+              appTooltip="Ansehen"
             >
               <i class="bx bx-show"></i>
             </button>
@@ -68,9 +66,7 @@
               type="button"
               class="btn btn-light btn-md m-1"
               (click)="editTrainingPlan(trainingPlan.id)"
-              data-bs-toggle="tooltip"
-              data-bs-placement="top"
-              title="Bearbeiten"
+              appTooltip="Bearbeiten"
             >
               <i class="bx bx-edit"></i>
             </button>
@@ -78,9 +74,7 @@
               type="button"
               class="btn btn-light btn-md m-1"
               (click)="deleteTrainingPlan(trainingPlan.id)"
-              data-bs-toggle="tooltip"
-              data-bs-placement="top"
-              title="Löschen"
+              appTooltip="Löschen"
             >
               <i class="bx bx-trash"></i>
             </button>
