--- a/client/src/app/Pages/training-plans/training-plans.component.scss
+++ b/client/src/app/Pages/training-plans/training-plans.component.scss
@@ -67,3 +67,17 @@
   width: 50px;
   height: 50px;
 }
+
+.tooltip {
+  position: absolute;
+  background: #333;
+  color: #fff;
+  padding: 5px;
+  border-radius: 3px;
+  font-size: 12px;
+  pointer-events: none;
+  z-index: 1000;
+  transition: opacity 0.2s, visibility 0.2s;
+  visibility: hidden;
+  opacity: 0;
+}
