--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -41,16 +41,40 @@ input[type="number"] {
   -ms-appearance: textfield;
 }
 
-.tooltip {
+/* training-plans.component.scss oder global styles.scss */
+.tooltip-container {
+  font-family: "Poppins", sans-serif;
   position: absolute;
   background: #333;
   color: #fff;
-  padding: 5px;
-  border-radius: 3px;
+  padding: 2px 5px;
+  border-radius: 3.25px;
   font-size: 12px;
   pointer-events: none;
   z-index: 1000;
   transition: opacity 0.2s, visibility 0.2s;
   visibility: hidden;
   opacity: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.tooltip-container::after {
+  content: "";
+  position: absolute;
+  bottom: -17.5px; /* Position it at the bottom of the tooltip */
+  left: 50%;
+  transform: translateX(-50%);
+  border-width: 10px;
+  border-style: solid;
+  border-color: #333 transparent transparent transparent; /* Triangle with the color */
+}
+
+.tooltip-text {
+  background: #333;
+  color: #fff;
+  padding: 5px;
+  border-radius: 3px;
+  font-size: 12px;
 }
