--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -41,14 +41,14 @@ input[type="number"] {
   -ms-appearance: textfield;
 }
 
-/* training-plans.component.scss oder global styles.scss */
+/* Tooltip container styles */
 .tooltip-container {
   font-family: "Poppins", sans-serif;
   position: absolute;
-  background: #333;
+  background: rgba(0, 0, 0, 0.8);
   color: #fff;
-  padding: 2px 5px;
-  border-radius: 3.25px;
+  padding: 5px 10px;
+  border-radius: 6px;
   font-size: 12px;
   pointer-events: none;
   z-index: 1000;
@@ -58,23 +58,26 @@ input[type="number"] {
   display: flex;
   flex-direction: column;
   align-items: center;
+  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.2);
 }
 
+/* Tooltip arrow styles */
 .tooltip-container::after {
   content: "";
   position: absolute;
-  bottom: -17.5px; /* Position it at the bottom of the tooltip */
+  bottom: -10px;
   left: 50%;
   transform: translateX(-50%);
-  border-width: 10px;
+  border-width: 6px;
   border-style: solid;
-  border-color: #333 transparent transparent transparent; /* Triangle with the color */
+  border-color: rgba(0, 0, 0, 0.8) transparent transparent transparent;
 }
 
+/* Text within the tooltip */
 .tooltip-text {
-  background: #333;
-  color: #fff;
-  padding: 5px;
-  border-radius: 3px;
-  font-size: 12px;
+  background: transparent;
+  color: inherit;
+  padding: 0;
+  border-radius: 0;
+  font-size: inherit;
 }
