--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -1,4 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap");
+@import "./app//css/tooltip.scss";
+
 * {
   box-sizing: border-box;
   font-family: "Poppins", sans-serif;
@@ -59,25 +61,4 @@ input[type="number"] {
   flex-direction: column;
   align-items: center;
   box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.2);
-}
-
-/* Tooltip arrow styles */
-.tooltip-container::after {
-  content: "";
-  position: absolute;
-  bottom: -10px;
-  left: 50%;
-  transform: translateX(-50%);
-  border-width: 6px;
-  border-style: solid;
-  border-color: rgba(0, 0, 0, 0.8) transparent transparent transparent;
-}
-
-/* Text within the tooltip */
-.tooltip-text {
-  background: transparent;
-  color: inherit;
-  padding: 0;
-  border-radius: 0;
-  font-size: inherit;
 }
