--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap");
-@import "./app//css/tooltip.scss";
+@import "./css/tooltip.scss";
+@import "./css/input.scss";
 
 * {
   box-sizing: border-box;
@@ -14,51 +15,4 @@ body {
 
 .blur-background > *:not(app-modal) {
   filter: blur(2px);
-}
-
-.transparent-input {
-  border: none;
-  background-color: transparent;
-  width: 100%;
-}
-
-.transparent-input:focus {
-  border: none;
-  outline: none;
-}
-
-/* Hide up and down arrows from number inputs */
-input[type="number"] {
-  -moz-appearance: textfield; /* Firefox */
-}
-
-input[type="number"]::-webkit-outer-spin-button,
-input[type="number"]::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-  margin: 0; /* Chrome, Safari, Edge, Opera */
-}
-
-/* Remove up and down arrows in IE10+ */
-input[type="number"] {
-  -ms-appearance: textfield;
-}
-
-/* Tooltip container styles */
-.tooltip-container {
-  font-family: "Poppins", sans-serif;
-  position: absolute;
-  background: rgba(0, 0, 0, 0.8);
-  color: #fff;
-  padding: 5px 10px;
-  border-radius: 6px;
-  font-size: 12px;
-  pointer-events: none;
-  z-index: 1000;
-  transition: opacity 0.2s, visibility 0.2s;
-  visibility: hidden;
-  opacity: 0;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.2);
 }
