--- a/client/src/app/create-training-form/create-training-form.component.html
+++ b/client/src/app/create-training-form/create-training-form.component.html
@@ -7,6 +7,7 @@
           style="position: relative"
         >
           <img
+            #coverImage
             src="https://via.placeholder.com/150"
             alt="Cover Bild Platzhalter"
             id="cover-image"
